# vires-interface

./: CMakeLists.txt  Introduction.h  Utils.h  ViresConfiguration.cpp  ViresConfiguration.h  ViresInterface.cpp  ViresInterface.h  vires_common.cpp  vires_common.h  vires_configuration.cpp  vires_configuration.h
Communication/: example.cc  example.cpp  rdbHandler.20170102.tgz  rdbTrigger.20170522.tgz  sampleClientSimulink.tgz  sampleClientsRDBandSCP.tgz  sampleGenericPlatformRDB.tgz  sampleShmReaderWriterRDB.tgz
Communication/Common/: rdbMapper.c  viRDBIcd.h
Communication/Common_old/: RDBHandler.cc  RDBHandler.hh  viRDBIcd.h
Communication/GenericPlatform/CustomBlockRDB_FromVTD.Contact/: vtdGatewayRxCp.c  vtdGatewayRxCp.h
Communication/GenericPlatform/CustomBlockRDB_FromVTD.Dyn/: vtdGatewayRxDyn.c  vtdGatewayRxDyn.h
Communication/GenericPlatform/CustomBlockRDB_ToVTD.Contact/: vtdGatewayTxCp.c  vtdGatewayTxCp.h
Communication/GenericPlatform/CustomBlockRDB_ToVTD.Dyn/: vtdGatewayTxDyn.c  vtdGatewayTxDyn.h
Communication/RDBClientSample/: ExampleConsoleDriverCtrl.cpp  ExampleVehDynInteg.cpp  compile.sh  compileDriverCtrl.sh  compileVehDynInteg.sh
Communication/RDBShmAtTcSample/: DriverCtrlViaShm.cpp  compile.sh  startOptions.txt
Communication/RDBShmSample/: ShmReader.cpp  ShmWriter.cpp  ShmWriterExtNewSyncDualIG.cpp  compile.sh  shmReader  shmWriter  shmWriterExtNewSyncDualIG
Communication/RDBTriggerSample/: TriggerSample.cc  compile.sh  triggerGenerator
Communication/RDBUdpSample/: ExampleVehDynInteg.cpp  compileVehDynInteg.sh  rdbTest
Communication/RDBVideoTriggerAndReadback/: TriggerAndReadback.cpp  videoTest
Communication/RDBVideoTriggerAndReadbackDualIG/: TriggerAndReadback.cpp  compile.sh  videoTest
Communication/SCPClientSample/: compile.sh
Communication/Simulink/CustomBlockRDB_Decoders/: rdbDecodeObjState.c  rdbDecodeRoadPos.c
Communication/Simulink/CustomBlockRDB_FromVTD/: rdbreader.c
Communication/Simulink/CustomBlockRDB_SHMRx/: viresShmRx.c
Communication/Simulink/CustomBlockRDB_ToVTD/: rdbwriter.c
Communication/Simulink/CustomBlockRDB_UDPRx/: viresUdpRx.c
Communication/Simulink/CustomBlockRDB_UDPTx/: viresUdpTx.c
vires/: RDBHandler.cc
(+3 files in other folders)
